# Password-Manager-CPP

./: .dockerignore  .gitignore  00_LEE_PRIMERO.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  PHASE2_CHECKLIST.md  PHASE2_GUIDE.md  PHASE2_INDEX.md  PHASE2_PROGRESS.md  PHASE2_QUICKSTART.md  PHASE2_REFERENCE.md  PHASE2_START_HERE.md  PHASE2_TEMPLATES.md  PHASE2_VISUAL.md  Plan_de_Trabajo.md  README.md  README_PHASE2.md  SQLITE_IMPLEMENTATION_STEPS.md  SQLITE_LEARNING_PACKAGE.md  SQLITE_START_HERE.md  SQLITE_TEACHING_GUIDE.md  SQLITE_VISUAL_GUIDE.md  docker-compose.yml  run-app.sh
doc/: APP_MODULE.md  ARCHITECTURE.md  CORE_MODULE.md  CRYPTO_MODULE.md  INDEX.md  LIBRARIES_REFERENCE.md  STORAGE_MODULE.md  SUMMARY.md  UI_MODULE.md
include/: AddPasswordDialog.hpp  AuthenticationManager.hpp  CryptoManager.hpp  EditPasswordDialog.hpp  InitializationManager.hpp  LoginDialog.hpp  MainWindow.cpp  MainWindow.hpp  NewUserDialog.hpp  SQLiteCipherDB.hpp  SessionManager.hpp  library.hpp
src/: main.cpp
src/app/: AuthenticationManager.cpp  InitializationManager.cpp  SessionManager.cpp
src/core/: Debug.cpp  Filesystem.cpp
src/crypto/: CryptoManager.cpp
src/storage/: SQLiteCipherDB.cpp
src/ui/: AddPasswordDialog.cpp  EditPasswordDialog.cpp  LoginDialog.cpp  MainWindow.cpp  NewUserDialog.cpp
